v0.0.1.10----小重构,修复一些bug,解决程序退出而进程还在的问题,更新依赖,对于不成熟的功能默认禁用